scss/partials/_projects-list.scss
.projects-list {
	background-color:$dark;
	display:flex;
	flex-direction:column;

	@include queryWidth(min, 1301px) {
		padding:64px 0;
		flex:0 0 400px;
	}
	@include queryWidth(max, 1300px) {
		padding:48px 0;
		flex:0 0 auto;
	}
	@include queryWidth(max, 768px) {
		flex-direction:row;
		padding:0;
		overflow-x:auto;
		overflow-y:hidden;
		-webkit-overflow-scrolling:touch;
	}
}

.project-item {
	color:#FFF;
	cursor:pointer;
	position:relative;
	z-index:1;

	@include queryWidth(max, 768px) {
		flex:0 0 auto;
	}
}

.project-item-content {
	background-color:transparent;
	transition:background-color 0.35s $standardCurve;

	@include queryWidth(min, 1025px) {
		padding:48px;
	}
	@include queryWidth(max, 1024px) {
		padding:32px;
	}	
}

.project-item h2 {
	font-weight:normal;
	display:inline;
	-webkit-font-smoothing:antialiased;
	color:#FFF;
	position:relative;
	transition:color 0.35s $standardCurve;

	&:after {
		content:'';
		width:100%;
		height:1px;
		background-color:$accent;
		position:absolute;
		bottom:-4px;
		left:0;
		transition:transform 0.35s $standardCurve;
		transform-origin:0 50%;
		transform:scaleX(0);
	}

	@include queryWidth(min, 1301px) {
		font-size:1.2em;
	}
	@include queryWidth(max, 1300px) {
		font-size:0.9em;
	}
}

.project-item .project-item-tech {
	text-transform:uppercase;
	color:#BBB;

	@include queryWidth(min, 1025px) {
		font-size:0.65em;
	}
	@include queryWidth(max, 1024px) {
		font-size:0.5em;
	}
}




/**
 * Hover/Active
 */

 @include queryWidth(min, 769px) {
 	.project-item:hover .project-item-content,
 	.project-item-content.router-link-active {
 		background-color:lighten($dark, 5%);

 		h2 {
 			color:$accent;
 			&:after {
 				transform:scaleX(1);
 			}	
 		}
 	}

 	.projects-list:hover .project-item:not(:hover) .project-item-content.router-link-active {
 		background-color:$dark;

 		h2 {
 			color:#FFF;

 			&:after {
 				transform:scaleX(0);
 			}
 		}
 	}
 }

